--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/bcrypt-nodejs": "^0.0.31",
     "@types/cors": "^2.8.12",
     "@types/mongodb": "^4.0.7",
+    "bcrypt": "^5.0.1",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -20,6 +23,7 @@
     "mongodb": "^4.7.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.42",
     "nodemon": "^2.0.16",
