--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
-    "mongodb": "^4.7.0"
+    "mongo-objectid": "^1.2.2",
+    "mongodb": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
